corrected syntax and removed extra spaces

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -42,7 +42,6 @@ main
   box-shadow: .1rem .1rem .1rem#d3d3d3;
   border-radius: .2rem;
   font-size: smaller;
-  font-weight: 0;
   margin:0;
 }
 
